# NIITP_Practice

./: CMakeLists.txt  Journal.docx  Module diagram.txt  Object Diagram for system,.txt  Program.docx  README.md  Report.docx  Schedule.docx  Sequence Diagram for Our Protocol with splitting by torrent.txt  Sequence Diagram for bittorrent without Tracker.txt  Sequence Diagram for bittorrent.txt  structureDiagram.txt  templateV2.xml
CMakeModules/: ODB.cmake
Client_Server_S3/: Minio_server.ipynb  ORM.ipynb  XML-Parse.ipynb  practise_main.ipynb
include/: aux.hpp  constants.hpp  torrentHandlers.hpp  xmlHandlers.hpp
include/databaseHandler/: databaseHandler.hpp  dbConstants.hpp  dbTypes.hpp
include/databaseHandler/dbtypes/: Addressees.hpp  Contacts.hpp  DocInfos.hpp  Document.hpp  Fields.hpp  Parts.hpp
include/dbtypes/: Document.hpp  Message.hpp  MessageEntityTextUrl.hpp  MessageReplies.hpp  PeerChanel.hpp  Photo.hpp  Poll.hpp  ReplyMarkup.hpp  Sizes.hpp
src/: CMakeLists.txt  aux.cpp  torrentHandlers.cpp  xmlHandlers.cpp
src/databaseHandler/: databaseHandler.cpp
src/databaseHandler/dbtypes/: Addressees.cpp  Contacts.cpp  DocInfos.cpp  Document.cpp  Fields.cpp  Parts.cpp
src/dbtypes/: Audio.cpp  Chat.cpp  Contact.cpp  File.cpp  Location.cpp  Message.cpp  MessageEntityTextUrl.cpp  MessageReplies.cpp  PeerChanel.cpp  Photo.cpp  Poll.cpp  ReplyMarkup.cpp  Sizes.cpp  User.cpp  Video.cpp
